--- a/views/view-user.hbs
+++ b/views/view-user.hbs
@@ -1,19 +1,3 @@
-
-{{#if removedUser}}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  <strong>The user has been removed!</strong>
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-{{/if}}
-
-<div class="row mb-3">
-  <div class="col-6"><h3>Users</h3></div>
-  <div class="col-6 justify-content-end d-flex">
-    <a href="/adduser" type="button" class="btn btn-primary align-self-center">Add User</a>
-  </div>
-</div>
-
-
 <table class="table table-striped table-bordered">
   <thead class="thead-dark">
     <tr>
@@ -22,6 +6,8 @@
       <th scope="col">Last Name</th>
       <th scope="col">Email</th>
       <th scope="col">Phone</th>
+      <th scope="col">Status</th>
+      <th scope="col">Comments</th>
       <th scope="col">Action</th>
     </tr>
   </thead>
@@ -33,8 +19,9 @@
       <td>{{this.last_name}}</td>
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
+      <td>{{this.status}}</td>
+      <td>{{this.comments}}</td>
       <td>
-          <a href="/viewuser/{{this.id}}" type="button" class="btn btn-dark btn-sm "><i class="bi bi-binoculars-fill"></i> View</a>
           <a href="/edituser/{{this.id}}" type="button" class="btn btn-dark btn-sm"><i class="bi bi-pen-fill"></i> Edit</a>
           <a href="/{{this.id}}" type="button" class="btn btn-dark btn-sm"><i class="bi bi-trash-fill"></i> Delete</a>
       </td>
